// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      hey
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      hey
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC jPMzwq"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-fXmTIC eBWTjh"
    role="document"
  >
    <div
      class="sc-gHbteL eByfcB sc-hjOXZQ hLMrYm"
      tabindex="0"
    >
      <span
        class="sc-gVpmpR fNPULf"
      >
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cbuLjy hinQPD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dTCDEk jcXCid sc-kTmAaw dPerFL"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-htBWof kNMnUH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cbuLjy hinQPD"
    >
      : 
    </i>
    <span
      class="sc-dwkskT fEeJKq"
    >
      Hey
       
      <span
        class="sc-dTCDEk jcXCid sc-jtyQFi vNOnh"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-htBWof kNMnUH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
